Prevent stretching of thumbnails on featured cards.

--- a/app/account/styles/_card.styl
+++ b/app/account/styles/_card.styl
@@ -28,7 +28,7 @@ $cardGutter = 15px;
     }
 
     .card-preview {
-      background-size: 100% 100%;
+      background-size: 100% auto;
     }
   }
 
